3dprint/apps-of-apps/apps/chart-apps/templates/octo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: octoprint-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hme43.local
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /delta(/|$)(.*)
        backend:
          service:
            name: octoprint-app
            port:
              number: 5000
