3dprint/apps-of-apps/apps/chart-apps/templates/octo2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octo-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: nginx.ingress.kubernetes.io/configuration-from: nginx-config
spec:
  
  rules:
  - host: hme43.local
    http:
      paths:
      - path: /delta
        pathType: Prefix
        backend:
          service: 
            name: octoprint-app
            port: 
              number: 5000
      - path: /webcam/  
        pathType: Prefix
        backend:
          service: 
            name: restreamer-app
            port:
              number: 80
